--- a/index.html
+++ b/index.html
@@ -237,6 +237,10 @@
 
 
     <section class="logos">
+        
+        <a href="assets/Resume 3.1.pdf">
+            <button>DOWNLOAD RESUME</button>
+        </a>
         <ul>
             <li>
                 <i class="fas fa-sitemap fa-4x"></i>
