fixing mobile, blocking mobile, adding resume

--- a/index.html
+++ b/index.html
@@ -264,5 +264,18 @@
     <footer>
         <p>&copy Lord Tapulao 2022</p>
     </footer>
+
+
+    <div class="oops">
+        <i class="far fa-frown-open fa-4x"></i>
+        <h1>Oops!</h1>
+        <p>Mobile view is still under construction. Please visit it on desktop.</p>
+        <a href="assets/Resume 3.1.pdf">
+            <button>DOWNLOAD RESUME</button>
+        </a>
+    </div>
+
+
+
 </body>
 </html>
