--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <h1>LORD</h1>
                 <h1>TAPULAO</h1>
                 <h2 class="jobDescription">
-                    Front end Developer & UI/UX Designer
+                    Front-end Developer and UI/UX Designer
                 </h2>
                 <ul class="hashtagList">
                     <li>#webdeveloper</li>
@@ -108,7 +108,9 @@
             <h1>Solutions</h1>
         </div>
         <div class="right">
-            <p>A Web Developer with extensive Information Technology knowledge, seeking a challenging opportunity where I will be able to utilize my strong organizational skills and high stress tolerance.</p>
+            <p>
+                A front-end focused Web Developer / Designer with extensive Information Technology knowledge, constantly seeking challenging growth opportunities to hone my technical, social and organizational skills.
+            </p>
             <a href="#contact">
                 <button>CONTACT ME</button>
             </a>
@@ -167,12 +169,13 @@
         <div class="left">
             <h1>AWARDS & CERTIFICATE</h1>
             <ul>
-                <li>• Adjudge as the 1st Runner-up during the ICTE : 1024 Programming Competition 2015</li>
-                <li>• Outstanding achievement as trainee in the mobile programming training held at University of Saint Louis during the Faculty Student IT congress 2014</li>
-                <li>• Citizenship Advancement Training Certificate of Participation</li>
-                <li>• Attending the faculty - Student Information Technology congress “ IT LEVEL UP : Leveraging Information Technology for Competitive Advancement. ”</li>
-                <li>• Attending the 11th Philippine Youth Congresson Information Technology at the SMX Convention Center , Pasay City 2013</li>
-                <li>• Active participation during the 1st Regional Innovation Conference on Education 2013</li>
+                <li>• Adjudged as the 1st Runner-up, ICTE : 1024 Programming Competition 2015 </li>
+                <li>• Outstanding trainee in mobile programming training, Faculty Student IT congress 2014</li>
+                <li>• Citizenship Advancement Training Certificate                 </li>
+                <li>• Faculty - Student Information Technology Congress “IT LEVEL UP : Leveraging Information Technology for Competitive Advancement.” 
+                </li>
+                <li>• Philippine Youth Congress on Information Technology</li>
+                <li>• Regional Innovation Conference on Education 2013</li>
             </ul>
         </div>
         <div class="right">
@@ -213,7 +216,7 @@
                     TULU CANADA
                 </h2>
                 <p>
-                    Building a social marketplace and system where the process is transparent.
+                    Building a System of client-friendly and transparent market place.
                 </p>
                 <a href="https://tulucanada.com/" target="_blank">
                     <button>LIVE SITE</button>
@@ -232,7 +235,7 @@
                     COVID-19 APP
                 </h2>
                 <p>
-                    A monitoring app that gives daily updates of the corona virus. The app will show confirmed cases, deaths, recoveries, histories, safety tips and a map of infected areas.
+                    A monitoring app that gives daily updates of the corona virus. The app will show confirmed cases, deaths, recoveries, histories, safety tips and a map of infected areas on a daily basis.
                 </p>
             </div>
         </div>
@@ -265,8 +268,7 @@
                     JUNGLE ADVENTURES
                 </h2>
                 <p>
-                    A simple 2d game created using HTML5, CSS3 and JavaScript.
-                    Combining code and creativity!
+                    An interactive 2D game developed using HTML, CSS, JavaScript and creativity!
                 </p>
                 <a href="https://lordtapulao.herokuapp.com/game" target="_blank">
                     <button>DEMO</button>
