--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         <i class="far fa-frown-open fa-4x"></i>
         <h1>Oops!</h1>
         <p>Mobile view is still under construction. Please visit it on desktop.</p>
-        <a href="assets/Resume 3.1.pdf">
+        <a href="assets/Lord Tapulao's CV.zip" download>
             <button>DOWNLOAD RESUME</button>
         </a>
     </div>
