--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
     <section class="logos" id="resume">
         
-        <a href="assets/Resume 3.1.pdf">
+        <a href="assets/Lord Tapulao's CV.zip" download>
             <button>DOWNLOAD RESUME</button>
         </a>
         <ul>
